[package]
name = "add-epic-to-project"
description = "This action takes issues with a certain tag and add the title as a new option in a projects custom field single select field."
version = "0.1.0"
edition = "2021"
rust-version = "1.67"

[dependencies]
anyhow = "1.0.69"
cynic = "2.2.8"
dotenv = "0.15.0"
graphql_client = "0.12.0"
octocrab = "0.18.1"
serde = "1.0.152"
serde_json = "1.0.94"
thiserror = "1.0.38"
tokio = {version = "1.26.0", features = ["full"]}

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
